[gd_scene load_steps=2 format=3 uid="uid://cyqvd2hx5rcrc"]

[ext_resource type="Script" path="res://Scripts/GUI Scenes/player_gui.gd" id="1_nqtfh"]

[node name="PlayerGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nqtfh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 253.0
offset_bottom = 70.0

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(1, 20)
layout_mode = 2
show_percentage = false

[node name="HealthLabel" type="Label" parent="CanvasLayer/VBoxContainer/HealthBar"]
layout_mode = 0
offset_left = 108.0
offset_top = -1.0
offset_right = 148.0
offset_bottom = 22.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(1, 20)
layout_mode = 2
show_percentage = false

[node name="StaminaLabel" type="Label" parent="CanvasLayer/VBoxContainer/StaminaBar"]
layout_mode = 0
offset_left = 108.0
offset_top = -1.0
offset_right = 148.0
offset_bottom = 22.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
